[qcms] Make build_output_lut output 4096 points for parametric curves

build_output_lut inverts a gamma table. Make it return 4096
points for para curves to provide better accuracy.

Update the test to down-sample the output curve data to the
size of the input gamma table. Write the input and output
curve data results to a CSV output file.

Update the gamma table size asserts(): the input and output
gamma table sizes of para curves might not be the same. The
most we know is they are >= 256 points (assert that).

BUG=600338

Review-Url: https://codereview.chromium.org/1923873002
Cr-Commit-Position: refs/heads/master@{#390402}

Former-commit-id: 4b0e97ee4cb19560b5857a53fcd19018846ec697